--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 app/android/wcandroid-16.9-universal.apk filter=lfs diff=lfs merge=lfs -text
+app/android/wcandroid-16.7-universal.apk filter=lfs diff=lfs merge=lfs -text
+app/android/ebacshop.apks filter=lfs diff=lfs merge=lfs -text
